<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Streamingmusic</string>
    <string name="action_settings">Settings</string>
    <string name="imageview">violinimg</string>
    <string name="btnPlayClassical">Classical Music</string>
    <string name="imageView2">countryimg</string>
    <string name="btnPlayCountry">Country Music</string>
    <string name="imgbtPlayBBC">bbcimg</string>

</resources>
