<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/violin"
        android:contentDescription="@string/imageview" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPlayClassical"
        android:id="@+id/btnPlayClassical"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:id="@+id/imageView2"
        android:layout_below="@+id/btnPlayClassical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/country_music"
        android:contentDescription="@string/imageView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPlayCountry"
        android:id="@+id/btnPlayCountry"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgbtPlayBBC"
        android:layout_below="@+id/btnPlayCountry"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/bbc_news_text"
        android:contentDescription="@string/imgbtPlayBBC" />
</RelativeLayout>
